--- a/Serv_let/pom.xml
+++ b/Serv_let/pom.xml
@@ -22,6 +22,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <packaging>war</packaging>
