--- a/SpringBoot/src/main/resources/application.properties
+++ b/SpringBoot/src/main/resources/application.properties
@@ -15,3 +15,6 @@
 #spring,datasource.username=root
 #spring.datasource.password=123456
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#指定配置文件
+spring.profiles.active = dev
