--- a/MyBaits-Demo/pom.xml
+++ b/MyBaits-Demo/pom.xml
@@ -54,6 +54,14 @@
 			<version>2.3.1</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-bo
+ot-starter-aop -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
