--- a/Maven-Demo/maven-demo/pom.xml
+++ b/Maven-Demo/maven-demo/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>org.example</groupId>
     <artifactId>maven-demo</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>Mybatis-Demo</module>
+    </modules>
 
 
 </project>
