--- a/brand-demo/brand-demo/pom.xml
+++ b/brand-demo/brand-demo/pom.xml
@@ -58,6 +58,13 @@
             <artifactId>standard</artifactId>
             <version>1.1.2</version>
         </dependency>
+
+        <!--fastjson-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.62</version>
+        </dependency>
     </dependencies>
 
 
